--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +12,10 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.787.0",
-    "@aws-sdk/client-s3": "^3.787.0"
+    "@aws-sdk/client-s3": "^3.787.0",
+    "ejs": "^3.1.10",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "openid-client": "^5.7.0"
   }
 }
