--- a/frontend/js/package.json
+++ b/frontend/js/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.787.0",
     "@aws-sdk/client-s3": "^3.787.0",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
